using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationString
{
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnCelling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string dash = "dash";
    internal static string isDashing = "isDashing";
    internal static string isDefending = "isDefending";
    internal static string defend = "defend";
    internal static string isKicking = "isKicking";
    internal static string kick = "kick";
    internal static string groundSlash = "groundSlash";
    internal static string isGroundSlashing = "isGroundSlashing";
    internal static string airSlash = "airSlash";
    internal static string isAirSlashing = "isAirSlashing";
    internal static string skill1 = "skill1";
    internal static string isSkill1 = "isSkill1";
    internal static string skill2 = "skill2";
    internal static string isSkill2 = "isSkill2";
    internal static string combo = "combo";
    internal static string slideCombo = "slideCombo";
    internal static string takeDamage = "takeDamage";
    internal static string isStune = "isStune";
    internal static string standUp = "standUp";
    internal static string die = "die";

    //charater 4 yugi
    internal static string isAttack = "isAttack";
    internal static string isSkill = "isSkill";
    internal static string isUltimate = "isUltimate";
    internal static string tagGaia = "gaia";
    internal static string nameGaia = "gaia_attack";
    internal static string tagKnight = "Knight";
    internal static string nameKinght = "knight_attack";
    internal static string tagPunch = "punch";
    internal static string namePunch = "punch_attack";
    internal static string tagSodier = "sodier";
    internal static string nameSodier = "sodier_attack";
    internal static string tagMagic = "magic";
    internal static string nameMagic = "magic_attack";
    internal static string nameSkill1 = "skill1_attack";
    internal static string nameSkill2 = "skill2_attack";
}